--- a/Inicial/Makefile
+++ b/Inicial/Makefile
@@ -1,6 +1,6 @@
 include ../.make.conf
 
-all: MinixFS.bin FAT12.bin Estagio2.bin
+all: MinixFS1440.bin MinixFS1200.bin MinixFS720.bin FAT12.bin Estagio2.bin
 
 clean:
 	@-rm *.bin
