--- a/Nucleo/Modulos/Makefile
+++ b/Nucleo/Modulos/Makefile
@@ -5,7 +5,7 @@ all: BRASIS.Imagem
 
 BRASIS.Imagem: MinixFS.Modulo Disquete.Modulo ISADMA.Modulo PS2.Modulo Modulos.cfg
 	@echo -= $@ =-
-	@ar -r $@ *.Modulo Modulos.cfg
+	@ar -rf $@ *.Modulo Modulos.cfg
 	@cp $@ $(ROOT)Distro/Temp/$@
 
 clean:
